tests/indexer/indexer.exp
A.js:13
 13:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ property `foo` is a string. This type is incompatible with
 12: function foo2(): {[key: number]: string} {
                             ^^^^^^ number

A.js:18
 18:   return { foo: "bar" }
                     ^^^^^ string. This type is incompatible with the expected return type of
 17: function foo3(): {[key: string]: number} {
                                      ^^^^^^ number

A.js:23
 23:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ property `foo` is a string. This type is incompatible with
 22: function foo4(): {[key: number]: number} {
                             ^^^^^^ number

A.js:23
 23:   return { foo: "bar" }
                     ^^^^^ string. This type is incompatible with the expected return type of
 22: function foo4(): {[key: number]: number} {
                                      ^^^^^^ number

A.js:38
 38:   return { foo: "bar" }
                     ^^^^^ string. This type is incompatible with the expected return type of
 37: function foo7(): {[key: string]: number; foo: number} {
                                                   ^^^^^^ number

multiple.js:7
  7:       [k2: number]: number, // error: not supported (yet)
           ^^^^^^^^^^^^^^^^^^^^ multiple indexers are not supported


Found 6 errors
